# complete-project

./: .env.example  .gitignore  PLATFORM_SPEC.md  TUITIONSMART_MOBILE_FRONTEND.md  TUITIONSMART_TEACHER_PART1.md  TUITIONSMART_TEACHER_PART2.md  docker-compose.yml  generate_chroma_pdf.py  generate_db_pdf.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  migrate_gps_columns.py  pyproject.toml  run.py
backend/app/: init_db.py  main.py
backend/app/api/: attendance.py  auth.py  chat.py  dashboard.py  departments.py  employees.py  leave.py  notifications.py  performance.py  recruitment.py  reports.py  roles.py  uploads.py
backend/app/core/: cache.py  config.py  database.py  encryption.py  firebase.py  rate_limiter.py  redis_client.py  security.py  security_headers.py
backend/app/hr_agent_system/: .env.example  README.md  main.py  requirements.txt
backend/app/hr_agent_system/agents/: attendance_agent.py  detection_agent.py  hr_chat_agent.py  leave_agent.py  performance_agent.py  recruitment_agent.py  (+1 more)
backend/app/models/: __init__.py  attendance.py  audit_log.py  base.py  chat.py  department.py  employee.py  hr_policy.py  leave.py  notification.py  performance.py  recruitment.py  report.py  role.py
backend/app/schemas/: attendance.py  auth.py  chat.py  department.py  employee.py  leave.py  notification.py  performance.py  report.py  role.py
backend/app/services/: attendance_service.py  employee_service.py  face_enrollment_service.py  face_service.py  knowledge_seeder.py  notification_service.py
backend/app/static/: chat.html
(+74 files in other folders)
